gtk+2.0 (2.24.30-4) UNRELEASED; urgency=medium

  * debian/control.in: Bump hicolor-icon-theme to a hard dependency, the
    package is small and only provides the directory structure of the theme.
  * Depends against gnome-icon-theme | adwaita-icon-theme so we are sure the
    needed icons are installed by default. When using the GNOME, the desktop
    sets the icon theme to Adwaita by default, so the gnome-icon-theme package
    can be removed.

 -- Laurent Bigonville <bigon@debian.org>  Thu, 14 Jul 2016 02:08:30 +0200

gtk+2.0 (2.24.30-3) unstable; urgency=medium

  [ Jeremy Bicha ]
  * Use https for copyright headers
  * Use https in d/watch and use new "special strings" to help standardize
    format

  [ Emilio Pozuelo Monfort ]
  * Let libgtk2.0-0 recommend libgail-common, so that installing a
    GTK+2.0 application also installs the accessibility libs.
    See #822612.
  * Add a libgail18-udeb package. Thanks to Samuel Thibault. Closes: #816720.
  * Set libgail18-udeb to section debian-installer.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 13 Jul 2016 17:43:50 +0200

gtk+2.0 (2.24.30-2) unstable; urgency=medium

  * Acknowledge NMU, thanks Salvatore Bonaccorso.
  * Drop gtk-update-icon-cache from libgtk2.0-bin. From now on we only provide
    one implementation which is built from src:gtk+3.0 and shipped in a
    separate package called gtk-update-icon-cache. To simplify the transition
    make libgtk2.0-bin depend on gtk-update-icon-cache. Once all theme
    packages have been updated, this dependency can be dropped.
  * Bump Standards-Version to 3.9.8.

 -- Michael Biebl <biebl@debian.org>  Sun, 22 May 2016 23:18:37 +0200

gtk+2.0 (2.24.30-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * CVE-2013-7447: Integer overflow in image handling (Closes: #799275)

 -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 18 Mar 2016 20:20:37 +0100

gtk+2.0 (2.24.30-1) unstable; urgency=medium

  * New upstream release 2.24.30